examples/errors/modules/CannotFindModule.bkf
module exporting () 

import foo.bar.goo as FBG -- oops, no such module
